# zephyr-security-showcase

./: .gitignore  CMakeLists.txt  Dockerfile  Kconfig  README.md  REUSE.toml  commitlint.config.mjs  sca_skipfile  west.yml
.github/workflows/: ci.yml  docker.yml
LICENSES/: Apache-2.0.txt  LicenseRef-OASIS-TCS.txt
lib/: CMakeLists.txt  Kconfig
lib/ul/: CMakeLists.txt  Kconfig
lib/ul/pkcs11/: CMakeLists.txt  Kconfig  pkcs11.c  pkcs11_args_helper.h  pkcs11_internal.h
samples/ul/pkcs11/: CMakeLists.txt  prj.conf  sample.yaml
samples/ul/pkcs11/boards/: native_sim.conf  nrf7002dk_nrf5340_cpuapp_ns.conf
samples/ul/pkcs11/src/: main.c
tests/lib/ul/pksc11/integration/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/ul/pksc11/integration/src/: main.c
tests/lib/ul/pksc11/unit/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/ul/pksc11/unit/src/: main.c
zephyr/: module.yml
